fix: isolate delayed terminal work by run